--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,18 @@ p {
     height: 100%;
     width: 100%;
 }
+#header-timer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: auto;
+    margin: 3% 5%;
+}
+#timer-container {
+    width: fit-content;
+}
 #user-input {
     display: flex;
     flex-direction: column;
@@ -69,7 +81,7 @@ p {
     height: 20%;
     margin: 5%;
 }
-#user-input h1 {
+#header-timer h1 {
     margin-top: 2%;
     padding: 5%;
     border-bottom: solid black 2px;
@@ -180,8 +192,18 @@ p {
 #timer-container {
     display: flex;
     align-items: center;
-    margin-right: 15%;
     font-size: 2rem;
+}
+#timer {
+    width: auto;
+}
+#clock {
+    scale: 1;
+    transition: 150ms ease-in-out;
+}
+#clock:hover {
+    scale: 1.08;
+    transition: 200ms ease-in-out;
 }
 
 
@@ -246,6 +268,7 @@ p {
 .header-svg {
     height: 25px;
     width: 25px;
+    margin: 10px;
 }
 .priority {
     display: flex;
@@ -285,6 +308,10 @@ p {
     #pop-up {
         top: 40%;
     }
+    #header-timer {
+        width: 50%;
+        margin: 10% 25%;
+    }
     .task-details {
         grid-template-columns: repeat(4, 1fr);
         grid-auto-rows: minmax(40px, auto);
@@ -299,12 +326,16 @@ p {
         margin-top: 0;
     }
     #user-input {
-        margin: 0 5% 5% 5%;
+        margin: 0 5%;
     }
     #pop-up {
         top: 30%;
         width: 30%;
         margin: 0 35%;
+    }
+    #header-timer {
+        width: 40%;
+        margin: 10% 30%;
     }
 }
 @media (min-width: 850px) {
@@ -312,11 +343,15 @@ p {
         width: 65%;
         margin: 10% 17.5%;
     }
+    #header-timer {
+        width: 30%;
+        margin: 2.5% 35%;
+    }
 }
 @media (min-width: 1000px) {
     #project-list {
         width: 90%;
-        margin: 10% 5%;
+        margin: 0 5%;
         display: flex;
         justify-content: space-around;
         overflow-x: auto;
